--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="about-wrapper__info load-hidden">
             <p class="about-wrapper__info-text">
-              Hello World, I am an experienced web developer that would like to make your projects come to life!
+              Hello World, I am an experienced web developer!
             </p>
             <p class="about-wrapper__info-text">
               I'm interested in creating new technologies that will help improve
